--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ python-dotenv = "^0.21.0"
 matplotlib = "^3.6.2"
 pymongo = "^4.3.3"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.19.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
