--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ jupyterlab = "^3.5.0"
 python-dotenv = "^0.21.0"
 matplotlib = "^3.6.2"
 pymongo = "^4.3.3"
+imageio = "^2.23.0"
+requests = "^2.28.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.19.4"
