--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ requests = "^2.28.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.19.4"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
