--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ matplotlib = "^3.6.2"
 pymongo = "^4.3.3"
 imageio = "^2.23.0"
 requests = "^2.28.2"
+black = {extras = ["jupyter"], version = "^23.12.0"}
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.19.4"
