--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ black = {extras = ["jupyter"], version = "^23.12.0"}
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.19.4"
 isort = "^5.12.0"
+ruff = "^0.11.2"
 
 [build-system]
 requires = ["poetry-core"]
