--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,21 @@
-[tool.poetry]
-name = "sufc-stats"
+[project]
+name = "sufc-stats-uv"
 version = "0.1.0"
-description = ""
-authors = ["Chris Hunt <chris.hunt@hudl.com>"]
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "imageio>=2.37.0",
+    "matplotlib>=3.10.1",
+    "mplsoccer>=1.4.0",
+    "numpy>=2.2.4",
+    "pymongo>=4.11.3",
+    "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^1.23.4"
-mplsoccer = "^1.2.1"
-jupyterlab = "^3.5.0"
-python-dotenv = "^0.21.0"
-matplotlib = "^3.6.2"
-pymongo = "^4.3.3"
-imageio = "^2.23.0"
-requests = "^2.28.2"
-black = {extras = ["jupyter"], version = "^23.12.0"}
-
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.19.4"
-isort = "^5.12.0"
-ruff = "^0.11.2"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "ruff>=0.11.2",
+]
